implementando calses generadas por swager
