# src/main/resources/openapi-bankAccount.yaml
@@ -1,18 +1,19 @@
-swagger: 3.0.0
+openapi: 3.0.0
 info:
   title: Microservicio de Cuentas Bancarias
   version: 1.0.0
   description: API para gestionar cuentas bancarias.
 
 paths:
-  /cuentas_bancarias/{account_id}:
+  /cuentas_bancarias/{accountId}:
     get:
       summary: Obtener información de una cuenta bancaria
       parameters:
         - name: accountId
           in: path
           required: true
-          type: string
+          schema:
+            type: string
       responses:
         200:
           description: Información detallada de la cuenta bancaria.
@@ -23,12 +24,13 @@ paths:
         - name: accountId
           in: path
           required: true
-          type: string
-        - name: Cuenta Bancaria
-          in: body
-          required: true
           schema:
-            $ref: "#/definitions/BankAccount"
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/BankAccount"
       responses:
         200:
           description: Información de la cuenta bancaria actualizada.
@@ -39,7 +41,8 @@ paths:
         - name: accountId
           in: path
           required: true
-          type: string
+          schema:
+            type: string
       responses:
         204:
           description: Cuenta bancaria eliminada con éxito.
@@ -47,98 +50,103 @@ paths:
   /cuentas_bancarias:
     post:
       summary: Crear una nueva cuenta bancaria
-      parameters:
-        - name: Cuenta Bancaria
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/BankAccount"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/BankAccount"
       responses:
         201:
           description: Cuenta bancaria creada con éxito.
 
 
-  /cuentas_bancarias/{account_id}/depositos:
+  /cuentas_bancarias/{accountId}/depositos:
     post:
       summary: Realizar un depósito en una cuenta bancaria
       parameters:
         - name: accountId
           in: path
           required: true
-          type: string
-        - name: Monto
-          in: body
-          required: true
           schema:
-            $ref: "#/definitions/DepositAmount"
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/DepositAmount"
+
+
       responses:
         200:
           description: Depósito realizado con éxito.
 
-  /cuentas_bancarias/{account_id}/retiros:
+  /cuentas_bancarias/{accountId}/retiros:
     post:
       summary: Realizar un retiro desde una cuenta bancaria
       parameters:
         - name: accountId
           in: path
           required: true
-          type: string
-        - name: Monto
-          in: body
-          required: true
           schema:
-            $ref: "#/definitions/WithdrawalAmount"
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/WithdrawalAmount"
       responses:
         200:
           description: Retiro realizado con éxito.
 
-  /cuentas_bancarias/{account_id}/movimientos:
+  /cuentas_bancarias/{accountId}/movimientos:
     get:
       summary: Consultar movimientos de una cuenta bancaria
       parameters:
         - name: accountId
           in: path
           required: true
-          type: stringr
+          schema:
+            type: string
       responses:
         200:
           description: Lista de movimientos de la cuenta bancaria.
 
-definitions:
-  BankAccount:
-    type: object
-    properties:
-      accountId:
-        type: string
-      customerId:
-        type: string
-      accountType:
-        type: string
-      balance:
-        type: string
-      deposits:
-        type: array
-        items: 
-          $ref: "#/definitions/DepositAmount"
-      withdrawalAmounts:
-        type: array
-        items:
-          $ref: "#/definitions/WithdrawalAmount" 
-          
-  DepositAmount:
-    type: object
-    properties:
-      amount:
-        type: number
-      depositDate:
-        type: string
+components:
+  schemas:
+    BankAccount:
+      type: object
+      properties:
+        accountId:
+          type: string
+        customerId:
+          type: string
+        accountType:
+          type: string
+        balance:
+          type: string
+        deposits:
+          type: array
+          items:
+            $ref: "#/components/schemas/DepositAmount"
+        withdrawalAmounts:
+          type: array
+          items:
+            $ref: "#/components/schemas/WithdrawalAmount"
+
+    DepositAmount:
+      type: object
+      properties:
+        amount:
+          type: number
+        depositDate:
+          type: string
 
 
-  WithdrawalAmount:
-    type: object
-    properties:
-      amount:
-        type: number
-      dateWithdrawal:
-        type: string
+    WithdrawalAmount:
+      type: object
+      properties:
+        amount:
+          type: number
+        dateWithdrawal:
+          type: string
 
